--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -56,6 +56,9 @@ footer {
 }
 
 .footer-modal {
+@media screen and (max-width: 767px) {
+    top: 500px;
+  }
   position: relative;
   background-color: #f7f7f7;
   padding: 30px;
@@ -78,9 +81,6 @@ footer {
    @media screen and (min-width: 768px) {
      width: 160px;
   }
-  // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-  //   0px 2px 1px rgba(0, 0, 0, 0.2);
-  // border-radius: 0px 0px 4px 4px;
 }
 .footer-team__item:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -118,42 +118,5 @@ footer {
   letter-spacing: 0.03em;
   color: #757575;
 }
-// .footer-team__media-social {
-//   width: 100%;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-// .footer-team__media-zone {
-//   display: block;
-// }
-// .footer-team__media-zone:not(:last-child) {
-//   margin-right: 5px;
-// }
-// .footer-team__media-link {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   width: 32px;
-//   height: 32px;
-//   border-radius: 50%;
-//   background-color: #fff;
-//   color: #757575;
-// }
-// .footer-team__media-icon {
-//   cursor: pointer;
-//   width: 28px;
-//   height: 28px;
 
-
-  // fill: currentColor;
-
-.basicLightbox{
-  // @media screen and (max-width: 767px) {
-  //   margin-top: 15px;
-  //   padding-top: 1000px;
-  //  height: 95vh; 
-  //  overflow-y: auto,
-  // }
-}
 
