--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,11 +3,11 @@
 @import './base/base';
 @import './utils/variables';
 @import './components/_header.scss';
-@import './components/ganres';
-@import './components/home-page.scss';
-@import './components/libruary-page.scss';
-@import './components/modal-card.scss';
-@import './components/footer';
-@import './components/pagination';
-@import './components/up-btn.scss';
-@import './components/dark-theme';
+@import './components/_ganres';
+@import './components/_home-page.scss';
+@import './components/_libruary-page.scss';
+@import './components/_modal-card.scss';
+@import './components/_footer';
+@import './components/_pagination';
+@import './components/_up-btn.scss';
+@import './components/_dark-theme';
