--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -91,6 +91,11 @@ footer {
 .footer-team__pic {
   width: 100%;
   height: 80%;
+  filter: grayscale(1);
+  transition: all 0.3s ease 0s;
+}
+.footer-team__pic:hover {
+  filter: grayscale(0);
 }
 .footer-team__crew {
   justify-content: center;
