--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -59,14 +59,14 @@ footer {
 
   @media screen and (max-width: 767px) {
     top: 530px;
-
+width:90vw;
  
   position: relative;
   background-color: #f7f7f7;
   padding: 30px;
   overflow: auto;}
   @media screen and (min-width: 768px) {
-    width: 600px;
+    width: 610px;
     padding-top: 15px;
     padding-bottom: 15px;
   }
@@ -92,6 +92,10 @@ background-size:cover;
   background-color:white;
   box-shadow      : 0px 4px 4px rgba(0, 0, 0, 0.15);
  }
+  @media screen and (min-width: 1024px) {
+ top: 8px;
+  right: -10px;
+  }
 }
 .footer-team__list {
   display: flex;
